syntax = "proto3";
option java_multiple_files = true;

package sdmxdl.format.protobuf;

message AboutDto {
  string name = 1;
  string version = 2;
}

message AttributeDto {
  string id = 1;
  string name = 2;
  optional CodelistDto codelist = 3;
  AttributeRelationshipDto relationship = 4;
}

enum AttributeRelationshipDto {
  UNKNOWN = 0;
  DATAFLOW = 1;
  GROUP = 2;
  SERIES = 3;
  OBSERVATION = 4;
}

message CodelistDto {
  string ref = 1; /* Representation of CodelistRef */
  map<string, string> codes = 2;
}

enum ConfidentialityDto {
  PUBLIC = 0;
  UNRESTRICTED = 1;
  RESTRICTED = 2;
  CONFIDENTIAL = 3;
  SECRET = 4;
}

message DatabaseDto {
  string ref = 1; /* Representation of DatabaseRef */
  string name = 2;
}

message DataRepositoryDto {
  string name = 1;
  repeated DatabaseDto databases = 2;
  repeated StructureDto structures = 3;
  repeated FlowDto flows = 4;
  repeated DataSetDto dataSets = 5;
  string creation_time = 6;
  string expiration_time = 7;
}

message MetaSetDto {
  FlowDto flow = 1;
  StructureDto structure = 2;
}

message DataSetDto {
  string ref = 1; /* Representation of FlowRef */
  QueryDto query = 2;
  repeated SeriesDto data = 3;
}

enum DetailDto {
  FULL = 0;
  DATA_ONLY = 1;
  SERIES_KEYS_ONLY = 2;
  NO_DATA = 3;
}

message DimensionDto {
  string id = 1;
  string name = 2;
  CodelistDto codelist = 3;
}

enum FeatureDto {
  DATA_QUERY_ALL_KEYWORD = 0;
  DATA_QUERY_DETAIL = 1;
}

message FlowDto {
  string ref = 1; /* Representation of FlowRef */
  string structure_ref = 2; /* Representation of StructureRef */
  string name = 3;
  optional string description = 4;
}

message ObsDto {
  string period = 1; /* Representation of TimeInterval */
  double value = 2;
  map<string, string> meta = 3;
}

message QueryDto {
  string key = 1; /* Representation of Key */
  DetailDto detail = 2;
}

message SeriesDto {
  string key = 1; /* Representation of Key */
  map<string, string> meta = 2;
  repeated ObsDto obs = 3;
}

message StructureDto {
  string ref = 1; /* Representation of StructureRef */
  repeated DimensionDto dimensions = 2;
  repeated AttributeDto attributes = 3;
  optional string time_dimension_id = 4;
  string primary_measure_id = 5;
  string name = 6;
}
